--- a/lywihm.css
+++ b/lywihm.css
@@ -210,14 +210,103 @@ margin-right: 5px;
 
  #slider figure{
      position: relative;
-     width: 300%;
+     width: 100%;
      margin: 0px;
      left:0;
-     animation: 3s slider infinite;
+     animation: 10s slide infinite;
  } 
- /* #slider figure img{
+ #slider figure img{
      width: 30.3%;
      float: left;
      margin: 1.5%;
 
- } */
+ }
+
+ .images{
+     position: relative;
+     width: 100%;
+ }
+ .mySlides {
+     display:none;
+ }
+
+
+/* #bt1{
+    float: left;
+    width: 50%;
+}
+#bt2{
+    float: right;
+    width: 50%;
+} */
+.images #bt1{
+    position: absolute;
+  top: 50%;
+  /* left: 50%; */
+  /* transform: translate(-50%, -50%);
+  -ms-transform: translate(-50%, -50%); */
+  background-color: #161616;
+  color: antiquewhite;
+  font-size: 16px;
+  padding: 12px 24px;
+  border: none;
+  cursor: pointer;
+  border-radius: 5px;
+  opacity: 0.3;
+   }
+
+   .images #bt2{
+    position: absolute;
+  top: 50%;
+  right: 0;
+  /* left: 50%; */
+  /* transform: translate(-50%, -50%);
+  -ms-transform: translate(-50%, -50%); */
+  background-color: #161616;
+  color: antiquewhite;
+  font-size: 16px;
+  padding: 12px 24px;
+  border: none;
+  cursor: pointer;
+  border-radius: 5px;
+  opacity: 0.3;
+
+   }
+
+   #bt1:hover{
+       opacity: 1.0;
+   }
+   #bt2:hover{
+       opacity: 1.0;
+   }
+
+.links{
+    width: 33.33%;
+    float: left;
+    background-color: #333333;
+    text-align: center;
+    height: 40px;
+}
+.links h4{
+    margin-top: 12px;
+
+}
+
+ .links h4 a{
+     text-decoration: none;
+     color: antiquewhite;
+     text-align: center;
+    
+ }
+#horiz2:hover{
+    background-color: #161616;
+}
+ 
+#horiz1:hover{
+    background-color: #161616;
+}
+#horiz3:hover{
+    background-color: #161616;
+}
+
+
