--- a/lywihm.css
+++ b/lywihm.css
@@ -83,6 +83,10 @@ body {
     margin: 0px;
    
 }
+.logo h1 a{
+    text-decoration: none;
+    color: #161616;
+}
 /* sign in|register button */
 .signin{
     width: 25%;
@@ -124,11 +128,12 @@ body {
     float:right;
 margin-top: 5px;
 margin-right: 5px;
+
 }
 #car img:hover{
     opacity: 0.4;
     transition: 0.2s;
-    background-color: #333333;
+    background-color: #161616;
 }
 /* main body with t-shirt categories */
 .container{
@@ -225,6 +230,7 @@ margin-right: 5px;
  .images{
      position: relative;
      width: 100%;
+     float: left;
  }
  .mySlides {
      display:none;
@@ -275,9 +281,11 @@ margin-right: 5px;
 
    #bt1:hover{
        opacity: 1.0;
+       transition: 0.5s;
    }
    #bt2:hover{
        opacity: 1.0;
+       transition: 0.5s;
    }
 
 .links{
