--- a/lywihm.css
+++ b/lywihm.css
@@ -3,8 +3,9 @@ body {
     /* font-family: 'Tangerine', serif; */
      overflow-x: hidden; 
      max-width: 600px;
+     animation: mymove 5s infinite;
   }
-
+  
 /* The Overlay (background) */
 .overlay {
   /* Height & width depends on how you want to reveal the overlay (see JS below) */   
@@ -237,8 +238,40 @@ margin-right: 5px;
        opacity: 1.0;
        transition: 0.5s;
    }
+.solidt{
+    margin-right: 10%;
+}
+.solidt ul {
+    display: inline-block;
+    list-style-type:none;
+    width:100%;
+    max-width: 600px;
+    
+}
+.display li{
+width: 45%;
+float: left;
 
+margin: 0 0 20px 20px;
+}
+section{
+    margin: 0 20px 0 20px;
+    
+    
+}
+section p{
+   
+    margin: 5px;
+}
+section a{
+    text-decoration: none;
+    color: #161616;
+}
 
+.display img{
+    width: 80%;
+    margin: 0 0 0px 20px;
+}
 
 /* bottom tab with contacts */
 .bottom{
@@ -259,7 +292,7 @@ margin-right: 5px;
     margin-left: 20px;
 }
 
-.bottom #phone h5,#mail h5{
+.bottom  h5{
     float: left;
     width: 100%;
     margin-bottom: 15px;
