--- a/LINKS/lywihm.css
+++ b/LINKS/lywihm.css
@@ -68,9 +68,16 @@ body {
     right: 35px;
   }
   
-
-#sidemenue{
-    width: 10%;
+/* slide menue button */
+.sbutton{
+    position: relative;
+    float:left;
+    width: 50%;
+    }
+.sbutton img{
+    
+    width: 15%;
+    float: left;
 }
 
 #sidemenue img:hover{
@@ -79,7 +86,7 @@ body {
     
 }
 .logo{
-    width:65%;
+    width:100%;
     height: 55px;
     float:left;
     margin-bottom: 5px;
@@ -88,7 +95,8 @@ body {
     font-size: 30px;
     letter-spacing: 10px;
     text-align: center;
-    margin: 0px;
+    margin-left: auto;
+    margin-right: auto;
    
 }
 .logo h1 a{
@@ -97,32 +105,26 @@ body {
 }
 /* sign in|register button */
 .signin{
-    width: 25%;
+    width: 50%;
     margin-left: 0px;
     margin-right: 0px;
-    margin-top: 40px;
-    float: left;
+    margin-top: 0px;
+    float: right;
 }
 .signin a{
  font-size: 8px;
  letter-spacing: 2px;
  margin-bottom: 0px;
- margin-left: 0px;
- float: left;
+ margin-left: auto;
+ margin-right: auto;
+ float: right;
  color: #333333;
  font-weight: bold;
+ padding-left: 3px;
+ padding-right: 3px;
+ margin-top: 10px;
 }
-/* slide menue button */
-.sbutton{
-    position: relative;
-    width:30%;
-    float:left;
-    top: 30px;
 
-}
-.sbutton img{
-    width: 30px;
-}
 /* grey tab below header */
 .tab{
     background-color: #333333;
