--- a/LINKS/lywihm.css
+++ b/LINKS/lywihm.css
@@ -76,7 +76,7 @@ body {
     }
 .sbutton img{
     
-    width: 15%;
+    width: 30px;
     float: left;
 }
 
@@ -352,3 +352,104 @@ section a{
     margin-left: 20px;
  }
 
+ /* forms CSS */
+.signtitle {
+    width: 85%;
+    margin-right: auto;
+    margin-left: auto;
+    text-align: center;
+    
+}
+.signtitle h2 {
+    width: 85%;
+    margin-left: auto;
+    margin-right: auto;
+    margin-top: 10px;
+    
+    
+}
+ .form
+ {
+    float: left;
+     width: 100%;
+     max-width: 600px;
+     position: relative;
+               
+ }
+
+ .innerBox{
+     width: 85%;
+     margin-right: auto;
+     margin-left: auto;
+     margin-top: 40px;
+     border: solid 1px #555;
+     margin-bottom: 40px;
+
+ }
+.form
+{
+    background-color: whitesmoke;
+  
+    
+}
+ .formRow{
+
+     width: 80%;
+     margin-left: 10%;
+     margin-right: 10%;
+       
+ }
+
+ .col{
+    float: left;
+    width: 100%;
+    max-width: 350px;
+    margin-top: 6px;
+  }
+
+ .formRow:after {
+    content: "";
+    display: table;
+    clear: both;
+  }
+ 
+ input[type=submit]{
+     width: 100%;
+     background-color:#333333;
+    border: none;
+    color: white;
+    text-decoration: none;
+    padding: 16px;
+    margin: 4px 2px;
+    cursor: pointer;
+ }
+ input[type=text],input[type=email],input[type=password]{
+    width: 100%;
+    padding: 12px 20px;
+    margin: 8px 0;
+    box-sizing: border-box;
+    border: 1px solid #555;
+    outline: none;
+ }
+ 
+ input[type=button]{
+    width: 100%;
+    background-color:#333333;
+   border: none;
+   color: white;
+   text-decoration: none;
+   padding: 16px;
+   margin: 4px 2px;
+   cursor: pointer;
+ }
+
+ input[type=text]:focus{
+    border: 3px solid #555; 
+ }
+#forgot a{
+    text-decoration: none;
+    color: #555;
+    }
+#forgot a:hover{
+    text-decoration: underline;
+}
